Add fileToElasticSearch feature.